# Bizreach-Auto-Scout-

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  scout.yml
config/: bizreach_selectors.example.yaml  bizreach_selectors.yaml  company.yaml  consultants.json  consultants.sample.json  prompt_template.md  scout_rules.yaml
data/: .gitkeep
deploy/: README.md  crontab.example
deploy/systemd/: bizscout-resends.service  bizscout-resends.timer  bizscout-run.service  bizscout-run.timer
docs/: GitHub Actionsで運用.md  スカウト分析.md  セレクタ設定ガイド.md  トラブルシューティング.md  運用手順.md
examples/: sample_candidates.csv  sample_profile.txt
src/bizreach_scout/: __init__.py  cli.py  config.py  consultant_import.py  consultants.py  eligibility.py  export.py  foreign.py  logging_config.py  models.py  ops.py  pipeline.py  rules.py  scheduler.py  service.py
src/bizreach_scout/analytics/: __init__.py  aggregate.py  reply_sync.py  sheets.py  sync.py  trend.py
src/bizreach_scout/bizreach/: __init__.py  api.py  api_sender.py  client.py  errors.py  inbox.py  outcome.py  pickup_probe.py  profile.py  reply_detect.py  reply_probe.py  search.py  selectors.py  send_probe.py  sender.py
src/bizreach_scout/generation/: __init__.py  generator.py  prompt.py  templates.py  validators.py
src/bizreach_scout/ingest/: __init__.py  base.py  bizreach_api_source.py  bizreach_pickup_source.py  bizreach_source.py  csv_source.py  parsing.py  text_source.py
src/bizreach_scout/storage/: __init__.py  repository.py
tests/: conftest.py  factories.py  test_aggregate.py  test_analytics_repo.py  test_analytics_sync.py  test_api_sender.py  test_bizreach_api.py  test_config.py  test_consultant_import.py  test_consultants.py  test_eligibility.py  test_foreign.py  test_generator.py  test_inbox.py  test_ingest.py  test_ops.py  test_parsing.py  test_pickup_source.py  test_pipeline.py  test_prompt.py  test_reply_detect.py  test_reply_probe.py  test_reply_sync.py  test_repository.py  test_rules.py  test_scheduler.py  test_send_api.py  test_send_probe.py  test_service.py  test_templates.py  test_validators.py
tests/fixtures/: resume_sample.json
