[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bizreach-auto-scout"
version = "0.1.0"
description = "医院・病院経営コンサル向け、ビズリーチ自動スカウト文面生成・送信システム"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "経営戦略研究所株式会社" }]
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "click>=8.1.0",
    "playwright>=1.40.0",
    "python-docx>=1.1.0",
    "gspread>=6.0.0",
    "google-auth>=2.23.0",
]

[project.scripts]
bizscout = "bizreach_scout.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0", "ruff>=0.1.0", "mypy>=1.7.0", "types-PyYAML>=6.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# 現状のカバレッジ実測は約59%。回帰防止として下限を設ける（下回るとCI失敗）。
# Playwright/ブラウザ操作系（client/probe）はユニットテストが困難なため全体値は低め。
addopts = "--cov=bizreach_scout --cov-report=term-missing --cov-fail-under=55"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# SIM(単純化) / RUF(ruff独自) を追加。自動修正可能な範囲で品質を底上げする。
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# E501: 行長は line-length で別途管理。
# RUF001-003: 日本語の全角記号（！（）「」等）を「紛らわしい」と誤検知するため無効化
#   （本システムの文面は全角が正しく、無効化しないと数千件の誤検知になる）。
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
# Playwright と密結合したブラウザ操作モジュールは動的型が多くノイズになるため、
# 型チェックの対象から外す（コアのロジックに型検査を集中させる）。
# これらは probe/送信のDOM操作で page/locator が動的なため mypy の恩恵が小さい。
[[tool.mypy.overrides]]
module = [
    "bizreach_scout.bizreach.client",
    "bizreach_scout.bizreach.send_probe",
    "bizreach_scout.bizreach.pickup_probe",
    "bizreach_scout.bizreach.reply_probe",
    "bizreach_scout.ingest.bizreach_pickup_source",
]
ignore_errors = true
